# data-core

./: .gitignore  .pylintrc  ARCHITECTURE.md  CLAUDE.md  CODE_WIKI.md  README.md  pyproject.toml
datacore/: __init__.py  alert.py  api.py  api_async.py  breaker.py  cli.py  config.py  fdc_compat.py  health.py  issue.py  metrics.py  metrics_endpoint.py  observability.py  stream.py
datacore/equity/: equity_provider.py
datacore/futures/: futures_provider.py
datacore/indicators/: core.py  legacy_numpy.py  talib_wrapper.py  tdx_compat.py
datacore/macro/: __init__.py  macro_provider.py  models.py
docs/: DEPLOYMENT.md  PRODUCTION_PLAN.md  SECURITY_CHECKLIST.md
scripts/: audit.py  bootstrap_all.py  bootstrap_datacore.py  gen_harness.py
tests/: benchmark_test.py  test_adjustment.py  test_adjustment_provider.py  test_alert.py  test_api.py  test_api_cache.py  test_breaker.py  test_cleaning.py  test_cli.py  test_collectors_mock.py  test_eastmoney_fix.py  test_equity.py  test_equity_mock.py  test_fdc_compat.py  test_fundamental_llm.py  test_futures.py  test_futures_mock.py  test_futures_models.py  test_futures_new_providers.py  test_futures_new_providers_extra.py  test_futures_providers.py  test_guosen.py  test_health.py  test_indicators.py  test_indicators_extra.py  test_issue.py  test_macro.py  test_macro_providers.py  test_metrics.py  test_models.py  test_news.py  test_news_providers.py  test_observability.py  test_operations.py  test_operations_config.py  test_operations_misc.py  test_phase1.py  test_processing.py  test_qlib_adapter.py  test_registry.py  (+7 more)
(+85 files in other folders)
