[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datacore"
version = "2.4.0"
description = "Data-Core: AI-Native 量化数据基础设施"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "httpx>=0.25",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
full = [
    "beautifulsoup4>=4.12",
    "duckdb>=0.9",
    "psycopg2-binary>=2.9",
    "redis>=5.0",
]
store = ["duckdb>=0.9"]
postgres = ["psycopg2-binary>=2.9"]
redis = ["redis>=5.0"]

[tool.setuptools.packages.find]
include = ["datacore*"]

[project.scripts]
datacore = "datacore.cli:main"

[tool.pytest.ini_options]
markers = [
    "benchmark: 性能基准测试标记",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
ignore_missing_imports = true
follow_imports = "skip"
exclude = [
    ".*/tests/.*",
    ".*/scripts/.*",
]
no_implicit_reexport = false

[[tool.mypy.overrides]]
module = [
    "talib",
    "tqsdk",
    "xtquant",
    "pdfplumber",
    "PyPDF2",
    "tavily",
    "httpx",
    "bs4",
    "duckdb",
    "redis",
    "psycopg2",
    "pydantic",
    "langchain.*",
    "openai",
]
ignore_missing_imports = true
